[package]
name = "e01_basic_ping_bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
